--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,130 @@
  *= require_tree .
  *= require_self
  */
+
+.full-screen{
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  background: #1F0D3D;
+}
+
+.logos{
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+  z-index: -1;
+  text-align: left;
+  img{
+    float: left;
+    height: 125px;
+  }
+  .bal{
+    height: 130px;
+  }
+  .bde{
+    height: 115px;
+    bottom: 0;
+    position: absolute;
+    right: 0;
+  }
+}
+
+.tweet{
+  clear: both;
+  margin-top: 50px;
+  margin-right: 10%;
+  margin-left: 10%;
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  display: block;
+  height: 45%;
+
+  .content{
+    font-size: 200%;
+    height: 120px;
+    width: 100%;
+    overflow:hidden;
+    text-overflow:ellipsis;
+  }
+}
+
+.tweet-from{
+  position: relative;
+  margin-top: 50px;
+  margin-right: 10%;
+  margin-left: 10%;
+  img{
+    float: right;
+    height: 100px;
+    width: 100px;
+    border: solid 1px white;
+    border-radius: 50%;
+    margin-left: 50px;
+    margin-bottom: 50px;
+  }
+  span.user{
+    float: right;
+    color: white;
+    font-size: xx-large;
+  }
+}
+.tweet:after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  right: 50px;
+  border: 15px solid white;
+  border-bottom-width: 0;
+  display: block;
+  width: 0;
+}
+
+.tweet-from:last-child{
+  img{
+    float: left;
+    height: 100px;
+    width: 100px;
+    border: solid 1px white;
+    border-radius: 50%;
+    margin-right: 50px;
+    margin-left: 0;
+    margin-bottom: 50px;
+  }
+  span.user{
+    float: left;
+    color: white;
+    font-size: xx-large;
+  }
+}
+
+
+.tweet-1{
+  .tweet{
+    height: 510px;
+    .media{
+      text-align: center;
+      > *{
+        margin-top: 12px;
+      }
+      img{
+        height: 300px;
+      }
+      video{
+        height: 300px;
+      }
+    }
+  }
+}
+
+.tweet-2{
+  .tweet{
+    height: 22.5%;
+  }
+}
