--- a/app/views/layouts/fullscreen.html.haml
+++ b/app/views/layouts/fullscreen.html.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body.full-screen
-    = yield
+    #screen= yield
     .logos
       %img.bal{src:'http://bal.bde-insa-lyon.fr/img/logo.png'}
       %img.bde.pull-right{src: 'https://raw.githubusercontent.com/BdEINSALyon/logos-bde/master/Logo%20BdE%20blanc.png'}
