--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -2,6 +2,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body{
+  background-color: #eee;
+}
+
 // make all images responsive by default
 img {
   @extend .img-responsive;
@@ -35,11 +39,16 @@ img {
 // to make views framework-neutral
 main {
   @extend .container;
-  background-color: #eee;
   padding-bottom: 80px;
-  width: 100%;
+  max-width: 950px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 51px; // accommodate the navbar
   }
+
+.btn-primary:visited, .btn-danger:visited, .btn-success:visited{
+  color: white !important;
+}
 section {
   @extend .row;
   margin-top: 20px;
