--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,23 +49,7 @@
 }
 
 .tweet{
-  clear: both;
-  margin-top: 50px;
-  margin-right: 10%;
-  margin-left: 10%;
-  background: white;
-  padding: 30px;
-  border-radius: 10px;
-  display: block;
-  height: 45%;
 
-  .content{
-    font-size: 200%;
-    height: 120px;
-    width: 100%;
-    overflow:hidden;
-    text-overflow:ellipsis;
-  }
 }
 
 .tweet-from{
@@ -87,16 +71,6 @@
     color: white;
     font-size: xx-large;
   }
-}
-.tweet:after {
-  content: "";
-  position: absolute;
-  bottom: -15px;
-  right: 50px;
-  border: 15px solid white;
-  border-bottom-width: 0;
-  display: block;
-  width: 0;
 }
 
 .tweet-from:last-child{
@@ -137,20 +111,27 @@
   left:0;
   right:0;
   overflow: hidden;
-
-  .tweet-1, .tweet-2{
+  height: 100%;
+  .display{
     height: 100%;
     width: 100%;
-  }
-
-  .tweet-1{
     .tweet{
+      clear: both;
+      margin-top: 5%;
+      margin-right: 10%;
+      margin-left: 10%;
+      background: white;
+      border-radius: 10px;
+      display: block;
       padding: 20px;
       height: 60%;
       .content{
         float: left;
         width: 55%;
         height: 100%;
+        font-size: xx-large;
+        line-height: 140%;
+        text-align: justify;
       }
       .media:after{
         clear: both;
@@ -165,27 +146,27 @@
           width: 100%;
         }
       }
-
-    }
-    .tweet-from{
-      height: 25%;
-    }
-  }
-
-  .tweet-2{
-    .tweet{
-      height: 20%;
-      .content{
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        font-size: 2vw;
+      &.without-resource{
+        height: 40%;
+        .content{
+          width: 100%;
+        }
+      }
+      &.with-resource{
+        height: 50%;
+        .content{
+          width: 55%;
+          font-size: xx-large;
+        }
+        .media{
+          width: 40%;
+        }
       }
     }
-    .tweet-from{
-      height: 20%;
-      margin-top: 5%;
-    }
   }
+  .tweet
+  .tweet-from{
+    height: 25%;
+  }
+
 }
