--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,19 +1,11 @@
-.tweet-2
-  .tweet
+.display
+  .tweet.with-resource
     .content
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae fermentum mauris. Donec pulvinar eget justo quis suscipit. Quisque tincidunt risus ac est fringilla elementum. Etiam in dolor est. Cras sed placerat quam. Quisque posuere.
-    -#.media
+      %span Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae fermentum mauris. Donec pulvinar eget justo quis suscipit. Quisque tincidunt risus ac est fringilla elementum. Etiam in dolor est. Cras sed placerat quam. Quisque posuere.
+    .media
       -#%img{src:'http://photo.animationtriangle.fr/2012/bal4.jpg'}
-      -#%video.visible.playing{'autoplay'=>true,'loop'=>true, :preload => "auto", :src => "https://pbs.twimg.com/tweet_video/CcqIXtbUsAEkHSV.mp4", :type => "video/mp4"}
+      %video.visible.playing{'autoplay'=>true,'loop'=>true, :preload => "auto", :src => "https://pbs.twimg.com/tweet_video/CcqIXtbUsAEkHSV.mp4", :type => "video/mp4"}
   .tweet-from
     %img{src: 'https://pbs.twimg.com/profile_images/694955623826391040/QyciGmjW_bigger.jpg'}
     %span.user
       @AliceLmbc
-  .tweet
-    .content
-      ='#YaQueDansLesPubs '
-      que tu ne butes pas ta petite soeur qui vient te réveiller le week-end pour bouffer des knakis.
-
-  .tweet-from
-    %img{src: 'https://pbs.twimg.com/profile_images/694955623826391040/QyciGmjW_bigger.jpg'}
-    %span.user @AliceLmbc
