Support images and videos

--- a/app/views/publications/_form.html.haml
+++ b/app/views/publications/_form.html.haml
@@ -9,6 +9,7 @@
     = f.input :resource
     = f.input :twitter_id, editable: false
     = f.input :published
+    = f.input :time
 
   .form-actions
     = f.button :submit, class: 'btn-block'
