--- a/app/views/publications/show.html.haml
+++ b/app/views/publications/show.html.haml
@@ -21,6 +21,9 @@
 %p
   %b Published:
   = @publication.published
+%p
+  %b Time:
+  = @publication.time
 
 = link_to 'Edit', edit_publication_path(@publication)
 \|
