Fully functional with twitter

--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,7 +1,7 @@
 .display.hide
   .tweet.with-resource
     .content
-      %span Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae fermentum mauris. Donec pulvinar eget justo quis suscipit. Quisque tincidunt risus ac est fringilla elementum. Etiam in dolor est. Cras sed placerat quam. Quisque posuere.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae fermentum mauris. Donec pulvinar eget justo quis suscipit. Quisque tincidunt risus ac est fringilla elementum. Etiam in dolor est. Cras sed placerat quam. Quisque posuere.
     .media
       %img.hide{src:'http://photo.animationtriangle.fr/2012/bal4.jpg'}
       %video.hide{'autoplay'=>true,'loop'=>true,'muted'=>true, :preload => "auto", :src => "https://pbs.twimg.com/tweet_video/CcqIXtbUsAEkHSV.mp4", :type => "video/mp4"}
