--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,45 +52,6 @@
 
 }
 
-.tweet-from{
-  position: relative;
-  margin-top: 50px;
-  margin-right: 10%;
-  margin-left: 10%;
-  img{
-    float: right;
-    height: 100px;
-    width: 100px;
-    border: solid 1px white;
-    border-radius: 50%;
-    margin-left: 50px;
-    margin-bottom: 50px;
-  }
-  span.user{
-    float: right;
-    color: white;
-    font-size: xx-large;
-  }
-}
-
-.tweet-from:last-child{
-  img{
-    float: left;
-    height: 100px;
-    width: 100px;
-    border: solid 1px white;
-    border-radius: 50%;
-    margin-right: 50px;
-    margin-left: 0;
-    margin-bottom: 50px;
-  }
-  span.user{
-    float: left;
-    color: white;
-    font-size: xx-large;
-  }
-}
-
 
 .tweet-1{
   .tweet{
@@ -127,23 +88,26 @@
       height: 60%;
       .content{
         float: left;
+        overflow: hidden;
         width: 55%;
         height: 100%;
         font-size: xx-large;
         line-height: 160%;
-        text-align: center;
+        text-align: left;
       }
       .media:after{
         clear: both;
       }
       .media{
+        margin: 0;
         width: 40%;
+        height: 100%;
         overflow: hidden;
         float: right;
         text-align: center;
         > *{
-          height: 100%;
-          width: 100%;
+          max-height: 100%;
+          width: auto;
         }
       }
       &.without-resource{
@@ -168,9 +132,37 @@
       }
     }
   }
-  .tweet
   .tweet-from{
     height: 25%;
+    position: relative;
+    margin-top: 50px;
+    margin-right: 10%;
+    margin-left: 10%;
+    img{
+      float: left;
+      height: 100px;
+      width: 100px;
+      border: solid 1px white;
+      border-radius: 50%;
+      margin-bottom: 50px;
+      margin-right: 30px;
+      margin-left: 20px;
+    }
+    span.user{
+      float: left;
+      color: white;
+      font-size: xx-large;
+      margin-top: 39px;
+      display: block;
+    }
   }
 
+}
+
+img.emoji {
+  display: inline;
+  height: 1em;
+  width: 1em;
+  margin: 0 .05em 0 .1em;
+  vertical-align: -0.1em;
 }
