--- a/app/views/publications/index.html.haml
+++ b/app/views/publications/index.html.haml
@@ -1,12 +1,17 @@
-%h1 Listing publications
-
+%h1.pull-left Listing publications
+= form_tag({action: :refresh}, {method: :get, class: %w{pull-right head-search}}) do
+  .input-group
+    %input.form-control{type: 'text', name: 'hashtag', value:'#balinsalyon'}
+    %span.input-group-btn
+      = button_tag class: %w{btn btn-success} do
+        %i.glyphicon.glyphicon-refresh
 %table.table.table-striped.table-bordered
   %thead
     %tr
-      %th Content
-      %th Author
-      %th Resource Added
-      %th Published
+      %th Contenu
+      %th Auteur
+      %th Média
+      %th Publié ?
       %th{colspan:3}
 
   %tbody
@@ -14,8 +19,23 @@
       %tr
         %td= publication.content
         %td= publication.author
-        %td= publication.resource_type
-        %td= publication.published
+        %td
+          - if publication.resource_type == 'image'
+            %image{width:'100%', src: publication.resource}
+          - elsif publication.resource_type == 'video' or publication.resource_type == 'gif'
+            %video{width:'100%', src: publication.resource}
+          - else
+            %span.text-muted NA
+        %td.text-center
+          - if publication.published
+            oui
+            %br
+            = link_to 'Masquer', {action: :hide, id: publication.id}, class: %w{btn btn-danger}
+          - else
+            non
+            %br
+            = link_to 'Afficher', {action: :publish, id: publication.id}, class: %w{btn btn-success}
+
         %td
           = link_to publication, class: %w{btn btn-primary} do
             %i.glyphicon-info-sign.glyphicon
