--- a/app/views/layouts/fullscreen.html.haml
+++ b/app/views/layouts/fullscreen.html.haml
@@ -11,5 +11,4 @@
   %body.full-screen
     #screen= yield
     .logos
-      %img.bal{src:'http://bal.bde-insa-lyon.fr/img/logo.png'}
-      %img.bde.pull-right{src: 'https://raw.githubusercontent.com/BdEINSALyon/logos-bde/master/Logo%20BdE%20blanc.png'}
+      %img{src:asset_url('bal.png')}
